[gd_scene load_steps=4 format=3 uid="uid://dr7mcchyaneju"]

[ext_resource type="LabelSettings" uid="uid://c1h8htpl43tff" path="res://assets/fonts/style_subtitle.tres" id="1_6et2s"]
[ext_resource type="Script" path="res://scenes/gui/components/facility_view.gd" id="1_cjm7p"]
[ext_resource type="LabelSettings" uid="uid://du8flicqbonao" path="res://assets/fonts/style_number.tres" id="2_73bpg"]

[node name="FacilityViewer" type="HBoxContainer"]
offset_right = 384.0
offset_bottom = 448.0
theme_override_constants/separation = 16
script = ExtResource("1_cjm7p")

[node name="FacilityView" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="TitleContainer" type="HBoxContainer" parent="FacilityView"]
layout_mode = 2

[node name="FacilityName" type="Label" parent="FacilityView/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "设施"
label_settings = ExtResource("1_6et2s")

[node name="Label" type="Label" parent="FacilityView/TitleContainer"]
layout_mode = 2
text = "位于 #"
label_settings = ExtResource("2_73bpg")

[node name="OutpostID" type="Label" parent="FacilityView/TitleContainer"]
layout_mode = 2
text = "000"
label_settings = ExtResource("2_73bpg")

[node name="HSeparator" type="HSeparator" parent="FacilityView"]
layout_mode = 2

[node name="Metadata" type="HBoxContainer" parent="FacilityView"]
layout_mode = 2

[node name="UnitViewContainer" type="VBoxContainer" parent="FacilityView"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="UnitView" parent="FacilityView/UnitViewContainer" instance_placeholder="res://scenes/gui/components/unit_view.tscn"]
unique_name_in_owner = true
layout_mode = 2

[node name="Operations" type="HBoxContainer" parent="FacilityView"]
layout_mode = 2

[node name="Button" type="Button" parent="FacilityView/Operations"]
layout_mode = 2
text = "拆除设施"

[connection signal="pressed" from="FacilityView/Operations/Button" to="." method="_on_destroy_facility"]
